--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -54,19 +54,17 @@
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
               %i.icon-user.icon-white.icon-large
               = @user_name
-              %span.caret
-            %ul.dropdown-menu
-              %li= link_to raw("<i class=icon-cogs></i> Settings"), edit_user_path(current_user)
-              %li.divider
-              %li= link_to raw("<i class=icon-bolt></i> Sign out"), signout_path, method: "delete"
-          %li.divider-vertical
-          %li#fat-menu.dropdown
-            %a.count.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-              = @user_cases_count.to_s
+              %span.count
+                = @user_cases_count.to_s
               %span.caret
             %ul.dropdown-menu
               %li= link_to raw("<i class=icon-book></i> Your Cases"), "/cases"
-              %li= link_to raw("<i class=icon-book></i> Analysis"), "/analysis"
+              %li= link_to raw("<i class=icon-book></i> Progress Analysis"), "/analysis"
+              %li.divider
+              %li= link_to raw("<i class=icon-cogs></i> Settings"), edit_user_path(current_user)
+              %li.divider
+              %li= link_to raw("<i class=icon-bolt></i> Sign out"), signout_path, method: "delete"
+
       -else
         %ul.nav.pull-left
           %li.divider-vertical
