--- a/app/views/cases/show.html.haml
+++ b/app/views/cases/show.html.haml
@@ -98,32 +98,44 @@
   var chartData = #{@chart_data};
 
   AmCharts.ready(function () {
-  // RADAR CHART
-  chart = new AmCharts.AmRadarChart();
-  chart.dataProvider = chartData;
-  chart.categoryField = "criteria";
-  chart.startDuration = 0;
+    // RADAR CHART
+    chart = new AmCharts.AmRadarChart();
+    chart.dataProvider = chartData;
+    chart.categoryField = "criteria";
+    chart.startDuration = 1;
+    chart.startEffect = ">";
+    chart.sequencedAnimation = true;
 
-  // VALUE AXIS
-  var valueAxis = new AmCharts.ValueAxis();
-  valueAxis.gridType = "circles";
-  valueAxis.fillAlpha = 0.05;
-  valueAxis.fillColor = "#000000"
-  valueAxis.axisAlpha = 0.2;
-  valueAxis.gridAlpha = 0;
-  valueAxis.fontWeight = "bold"
-  valueAxis.minimum = 0;
-  chart.addValueAxis(valueAxis);
+    // VALUE AXIS
+    var valueAxis = new AmCharts.ValueAxis();
+    valueAxis.gridType = "circles";
+    valueAxis.fillAlpha = 0.02;
+    valueAxis.fillColor = "#000000"
+    valueAxis.axisAlpha = 0.1;
+    valueAxis.gridAlpha = 0.1;
+    valueAxis.fontWeight = "bold"
+    valueAxis.minimum = 0;
+    valueAxis.maximum = 10;
+    chart.addValueAxis(valueAxis);
 
-  // GRAPH
-  var graph = new AmCharts.AmGraph();
-  graph.lineColor = "#98cdff"
-  graph.fillAlphas = 0.4;
-  graph.bullet = "round"
-  graph.valueField = "score"
-  graph.balloonText = "[[category]]: [[value]] m/s"
-  chart.addGraph(graph);
+    // GRAPH
+    var graph = new AmCharts.AmGraph();
+    graph.lineColor = "#98cdff"
+    graph.fillAlphas = 0.4;
+    graph.bullet = "round"
+    graph.valueField = "score"
+    graph.balloonText = "[[category]]: [[value]]/10"
+    chart.addGraph(graph);
 
-  // WRITE
-  chart.write("chartdiv");
+    // Balloon Settings
+    var balloon = chart.balloon;
+    balloon.adjustBorderColor = true;
+    balloon.color = "#000000";
+    balloon.cornerRadius = 5;
+    balloon.fillColor = "#000000";
+    balloon.fillAlpha = 0.7
+    balloon.color = "#FFFFFF"
+
+    // WRITE
+    chart.write("chartdiv");
   });
