--- a/app/views/cases/_cas.html.haml
+++ b/app/views/cases/_cas.html.haml
@@ -10,7 +10,7 @@
       %tr
         %td.case_avatar_block
           = avatar_for(@case_user)
-        %td.case_score
+        %td.score
           = @case_score
         %td.case_content_block
           %strong
