--- a/app/views/cases/analysis.html.haml
+++ b/app/views/cases/analysis.html.haml
@@ -36,7 +36,7 @@
               Analytical (Avg 5.4/10)
 
       #button_print_analysis.btn
-        Print Crib Sheet
+        Print Analysis for Interview
 
 
     %td{:valign => "top"}
