--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -59,7 +59,7 @@
               %span.caret
             %ul.dropdown-menu
               %li= link_to raw("<i class=icon-book></i> Your Cases"), "/cases"
-              %li= link_to raw("<i class=icon-book></i> Progress Analysis"), "/analysis"
+              %li= link_to raw("<i class=icon-search></i> Progress Analysis"), "/analysis"
               %li.divider
               %li= link_to raw("<i class=icon-cogs></i> Settings"), edit_user_path(current_user)
               %li.divider
