--- a/app/views/cases/new.html.haml
+++ b/app/views/cases/new.html.haml
@@ -6,13 +6,14 @@
   / error message div
   = render 'shared/error_messages', object: @case
 
-  .case_form
+  .case_form(style="margin-left:125px;")
     .row(style="margin-bottom:15px;")
       .span4
         / display target name
         %h5
-          Feedback For:
+          Feedback For
         .target_name
+          = avatar_for(@user_target)
           = @user_target.name
 
           
