--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
-%footer.footer
-  %nav
-    %ul
-      %li= link_to "About", about_path
-      %li= link_to "Contact", contact_path
+/ %footer.footer
+/   %nav
+/     %ul
+/       / %li= link_to "About", about_path
+/       / %li= link_to "Contact", contact_path
