--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,13 +1,13 @@
 %header.navbar.navbar-fixed-top
   .navbar-inner
     .container
-      - if signed_in?
-        = link_to "casenexus.com", users_path, id: "logo"
-      - else
-        = link_to "casenexus.com", "/", id: "logo"
+      #logo_container
+        - if signed_in?
+          = link_to image_tag("art/logo-globe.png"), users_path, id: "logo-globe"
+          = link_to image_tag("art/logo-text.png"), users_path, id: "logo-text"
       %nav
       - if signed_in?
-        %ul.nav.pull-left
+        %ul.nav.pull-left(style="padding-left:210px;")
 
           %li.divider-vertical
 
@@ -66,7 +66,6 @@
               %li= link_to raw("<i class=icon-bolt></i> Sign out"), signout_path, method: "delete"
 
       -else
-        %ul.nav.pull-left
-          %li.divider-vertical
+
 
 
