try marker_id on case index

--- a/app/views/cases/_cas.html.haml
+++ b/app/views/cases/_cas.html.haml
@@ -1,5 +1,5 @@
 / this should be marker_id...but doesn't work for no reason!
-- @case_user = User.find_by_id(cas.user_id)
+- @case_user = User.find_by_id(cas.marker_id)
 / generate total case score out of 50
 / could also add mini radars here?
 - @case_score = cas.plan + cas.analytic + cas.struc + cas.conc + cas.comms
