tweak analysis marker_id

--- a/app/views/cases/_cas.html.haml
+++ b/app/views/cases/_cas.html.haml
@@ -1,4 +1,4 @@
-/ this should be marker_id...but doesn't work for no reason!
+/ load marker user
 - @case_user = User.find_by_id(cas.marker_id)
 / generate total case score out of 50
 / could also add mini radars here?
