--- a/app/views/cases/analysis.html.haml
+++ b/app/views/cases/analysis.html.haml
@@ -61,7 +61,8 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(comment.marker_id).name
+                    / line below is causing problems on heroku for no reason!
+                    = User.find_by_id(2).name
                     %span.date
                       = comment.created_at.strftime("%d/%m/%Y")
                   .content
@@ -73,7 +74,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(comment.marker_id).name
+                    = User.find_by_id(2).name
                   .content
                     = comment.analytic_s
 
@@ -83,7 +84,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(comment.marker_id).name
+                    = User.find_by_id(2).name
                   .content
                     = comment.struc_s
 
@@ -93,7 +94,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(comment.marker_id).name
+                    = User.find_by_id(2).name
                   .content
                     = comment.conc_s
 
