tweak marker_id in analysis

--- a/app/views/cases/analysis.html.haml
+++ b/app/views/cases/analysis.html.haml
@@ -62,7 +62,7 @@
                 .cases_comment
                   .from
                     / line below is causing problems on heroku for no reason!
-                    = User.find_by_id(2).name
+                    = User.find_by_id(comment.marker_id).name
                     %span.date
                       = comment.created_at.strftime("%d/%m/%Y")
                   .content
@@ -74,7 +74,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(2).name
+                    = User.find_by_id(comment.marker_id).name
                   .content
                     = comment.analytic_s
 
@@ -84,7 +84,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(2).name
+                    = User.find_by_id(comment.marker_id).name
                   .content
                     = comment.struc_s
 
@@ -94,7 +94,7 @@
 
                 .cases_comment
                   .from
-                    = User.find_by_id(2).name
+                    = User.find_by_id(comment.marker_id).name
                   .content
                     = comment.conc_s
 
